+ Make use of AC_LIBTOOL_DLOPEN macro for Unix/Linux based systems to allow to
  create modules.
+ Create a loader module (without 'lib' prefix ) for each shared library (with 'lib' prefix)
+ The dirty hack to create symlinks during installation has been removed.
+ Builder3D Visual debuging facility
+ set default tabwidth in editor to 4 char, can be changed in user settings
+ block comment/uncomment implemented
+ Undo/Redo of block comment or uncomment implemented
+ Bug in DocItem class fixed: allow only one item with the same name
+ set the dirty flag after Gui::Document has been changed, remove after saving the document
+ WildMagic dllexport define (patch 1441148)
+ fix assert if missing feature (patch 1441146)
+ new modules (patches 1441103, 1441082)
+ Fixes for new modules (patch 1441145)
+ Specify orthographic or perspective camera in user settings
+ Ignore built files in Python script for creation of modules
+ Fixing Bug 1442521,
+ turn backface culling on/off (RFE 1443940). Seems to work properly with convex geometries only
+ Enabled two-side rendering for meshes in case it is not a solid
+ Return the edge list by reference in mesh kernel (to avoid memory leak)
+ PropertyVectorList implemented
+ Use PropertyVectorLists and PropertyFloatLists in Mesh::Curvature feature and its associated view provider
+ PropertyColor(List) implemeted
+ PropertyMeshKernel added
+ move all Projects to NODEFAULTLIBS
+ move all Projects to xcopy
+ start implementing the link between FreeCAD property and property editor
+ New methods in Builder3D (patch 1450695,1451028)
+ Set operations (patch 1451026, 1451138, 1451141)
+ start const Mesh and MeshProperty
+ implement class to evaluate and validate meshes with corresponding feature classes
+ dialog added to analyze and repair meshes
+ special viewproviders to display defects of meshes
+ delete features from the document
+ bug fixed: remove features to be deleted from the selection